<resources>
    <string name="app_name">CinematUZ</string>
    <string name="welcome_back">Witaj ponownie</string>
    <string name="login_subtitle">Zaloguj się na swoje konto, aby kontynuować oglądanie</string>
    <string name="continue_google">Kontynuuj z Google</string>
    <string name="continue_firebase">Kontynuuj z Firebase</string>
    <string name="or_email">LUB PRZEZ EMAIL</string>
    <string name="email">Email</string>
    <string name="email_hint">Wpisz swój email</string>
    <string name="password">Hasło</string>
    <string name="password_hint">••••••••</string>
    <string name="log_in">Zaloguj się</string>
    <string name="no_account">Nie masz konta?</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="terms_policy">Kontynuując, akceptujesz Regulamin i Politykę Prywatności CinematUZ.</string>
    <string name="next">Dalej</string>
    <string name="previous">Wstecz</string>
    <string name="lorem_ipsum">Tutaj pojawi się lista filmów…</string>
    <string name="action_settings">Ustawienia</string>
    <string name="first_fragment_label">Główny Ekran</string>
    <string name="second_fragment_label">Szczegóły</string>
    <string name="create_account">Stwórz konto</string>
    <string name="register_subtitle">Dołącz do społeczności CinematUZ i zacznij filmową przygodę</string>
    <string name="full_name">Nazwa użytkownika</string>
    <string name="full_name_hint">Wpisz swoją nazwę</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="captcha_mock">Nie jestem robotem</string>
    <string name="already_have_account">Masz już konto?</string>
    <string name="nav_start">Start</string>
    <string name="nav_library">Biblioteka</string>
    <string name="nav_friends">Znajomi</string>
    <string name="nav_map">Mapa kin</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_search">Wyszukiwarka</string>
    <string name="friends_tab_my_friends">Moi znajomi</string>
    <string name="friends_tab_groups">Grupy</string>
    <string name="friends_add_section_title">DODAJ NOWEGO ZNAJOMEGO</string>
    <string name="friends_scan_qr">Skanuj kod QR</string>
    <string name="friends_my_qr">Mój kod QR</string>
    <string name="friends_scan_qr_soon">Skanowanie kodu QR będzie dostępne wkrótce.</string>
    <string name="friends_my_qr_soon">Generowanie Twojego kodu QR będzie dostępne wkrótce.</string>
    <string name="friends_bluetooth_title">W pobliżu przez Bluetooth</string>
    <string name="friends_bluetooth_subtitle">Wyszukaj znajomych w kinie obok Ciebie</string>
    <string name="friends_bluetooth_soon">Wyszukiwanie przez Bluetooth będzie dostępne wkrótce.</string>
    <string name="friends_invites_title">ZAPROSZENIA (1)</string>
    <string name="friends_active_count">Aktywni znajomi</string>
    <string name="friends_active_count_dynamic">Aktywni znajomi (%1$d)</string>
    <string name="friends_groups_placeholder">Sekcja grup jest w przygotowaniu. Wkrotce dodamy wspolne glosowania i pokoje filmowe.</string>
    <string name="friends_search_fab">Wyszukaj znajomych</string>
    <string name="friends_search_dialog_title">Wyszukaj znajomych</string>
    <string name="friends_search_hint">Wpisz nazwe uzytkownika</string>
    <string name="friends_search_subtitle">Podpowiedzi aktualizuja sie podczas wpisywania</string>
    <string name="friends_search_empty">Brak pasujacych uzytkownikow</string>
    <string name="friends_remove_title">Usunac znajomego?</string>
    <string name="friends_remove_message">Czy na pewno chcesz usunac uzytkownika %1$s ze swojej listy znajomych?</string>
    <string name="friends_remove_confirm">Usun</string>
    <string name="friends_removed_toast">Usunieto znajomego</string>
    <string name="friends_added_toast">Dodano %1$s do znajomych</string>
    <string name="friends_already_added">%1$s jest juz na Twojej liscie</string>
    <string name="action_notifications">Powiadomienia</string>
    <string name="action_filters">Filtry</string>
    <string name="action_clear_search">Wyczyść wyszukiwanie</string>
    <string name="settings_language">Język</string>
    <string name="settings_theme">Motyw</string>
    <string name="theme_light">Jasny</string>
    <string name="theme_dark">Ciemny</string>
    <string name="skip_login">Tryb gościa</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="settings_logout">Wyloguj się</string>
    <string name="profile_not_logged_in">Gość</string>
    <string name="media_type_movie">FILM</string>
    <string name="media_type_tv">SERIAL</string>
    <string name="media_subtitle_format">%1$s • %2$s</string>
    <string name="hero_badge_new">Nowość</string>
    <string name="hero_button_trailer">Zwiastun</string>
    <string name="hero_button_details">Szczegóły</string>
    <string name="hero_empty_title">Brak tytułu</string>
    <string name="hero_empty_overview">Brak opisu dla tej produkcji.</string>
    <string name="hero_empty_rating">Brak oceny</string>
    <string name="search_hint">Szukaj filmów i seriali</string>
    <string name="filter_all">Wszystkie</string>
    <string name="filter_movies">Filmy</string>
    <string name="filter_tv">Seriale</string>
    <string name="trending_header">Popularne</string>
    <string name="map_search_bar">Szukaj kin lub miast...</string>
    <string name="to_watch">Do obejrzenia</string>
    <string name="watched">Obejrzane</string>
    <string name="add_to_group_vote">Dodaj do głosowania grupy</string>
    <string name="cast">Obsada</string>
    <string name="empty_trending">Brak danych do wyświetlenia.</string>
    <string name="empty_trending_network">Brak połączenia z siecią. Sprawdź internet.</string>
    <string name="empty_trending_category">Nie znaleziono żadnych produkcji w tej kategorii.</string>
    <string name="empty_search_initial">Wpisz tytuł filmu lub serialu, aby rozpocząć wyszukiwanie.</string>
    <string name="empty_search_results">Brak wyników. Spróbuj innej frazy lub zmień filtry.</string>
    <string name="no_trailer">Brak zwiastuna dla tej produkcji</string>
    <string name="empty_cast">Brak informacji o obsadzie dla tej produkcji.</string>
    <string name="details_empty_title">Brak tytułu</string>
    <string name="details_empty_overview">Brak opisu dla tej produkcji.</string>
    <string name="details_empty_rating">Brak oceny</string>
    <string name="details_empty_year">Brak roku</string>
    <string name="details_empty_duration">Brak czasu trwania</string>
    <string name="details_empty_genres">Brak gatunków</string>
    <string name="genre_action">Akcja</string>
    <string name="genre_adventure">Przygoda</string>
    <string name="genre_animation">Animacja</string>
    <string name="genre_comedy">Komedia</string>
    <string name="genre_crime">Kryminał</string>
    <string name="genre_documentary">Dokument</string>
    <string name="genre_drama">Dramat</string>
    <string name="genre_family">Familijny</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">Historia</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Muzyka</string>
    <string name="genre_mystery">Tajemnica</string>
    <string name="genre_romance">Romans</string>
    <string name="genre_scifi">Sci-Fi</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">Wojenny</string>
    <string name="genre_western">Western</string>
    <string name="genre_action_adventure">Akcja/Przygoda</string>
    <string name="genre_kids">Dla Dzieci</string>
    <string name="genre_scifi_fantasy">Sci-Fi/Fantasy</string>
    <string name="genre_politics">Polityka</string>
    <string name="genre_movie">Film</string>
    <string name="genre_other">Inne</string>
    <string name="filter_title">Filtry</string>
    <string name="filter_reset">RESETUJ</string>
    <string name="filter_sort_by">SORTUJ WEDŁUG</string>
    <string name="filter_sort_popularity">Popularność</string>
    <string name="filter_sort_release_date">Data wydania</string>
    <string name="filter_sort_rating">Ocena</string>
    <string name="filter_content_type">TYP TREŚCI</string>
    <string name="filter_type_all">Wszystkie</string>
    <string name="filter_type_movie">Film</string>
    <string name="filter_type_tv">Serial</string>
    <string name="filter_genre">GATUNEK</string>
    <string name="filter_release_year">ROK WYDANIA</string>
    <string name="filter_min_rating">MINIMALNA OCENA</string>
    <string name="filter_apply">Zastosuj (%1$d wyników)</string>
    <string name="filter_apply_simple">Zastosuj</string>
    <string name="filter_year_range_default">1950 - 2024</string>
    <string name="filter_rating_default">0.0+</string>
    <string name="tab_to_watch">DO OBEJRZENIA</string>
    <string name="tab_watched">OBEJRZANE</string>
    <string name="empty_library_to_watch">Nie masz nic do obejrzenia.</string>
    <string name="empty_library_watched">Twoja lista obejrzanych jest pusta.</string>
    <string name="empty_library_whats_new">ODKRYJ NOWOŚCI</string>
    <string name="profile_movies_watched">OBEJRZANE FILMY</string>
    <string name="profile_series_watched">OBEJRZANE SERIALE</string>
    <string name="profile_rank_newcomer">Nowicjusz</string>
    <string name="profile_rank_cinephile">Kinoman</string>
    <string name="profile_rank_cinephile_elite">Elitarny Kinoman</string>
    <string name="profile_xp_to_next_rank">%1$d / %2$d XP DO NASTĘPNEJ RANGI</string>
    <string name="profile_max_rank">Osiągnięto maksymalną rangę</string>
    <string name="profile_personalization">PERSONALIZACJA</string>
    <string name="profile_account">KONTO</string>
    <string name="profile_edit_profile">Edytuj profil</string>
    <string name="profile_edit_title">Edytuj profil</string>
    <string name="profile_save">Zapisz</string>
    <string name="profile_cancel">Anuluj</string>
    <string name="profile_updated">Profil zaktualizowany</string>
    <string name="profile_update_failed">Błąd aktualizacji profilu</string>
    <string name="profile_uploading">Przesyłanie zdjęcia...</string>
    <string name="profile_avatar_updated">Awatar zaktualizowany</string>
    <string name="profile_title">Profil</string>
    <string name="qr_dialog_title">Twój Kod CinematUZ</string>
    <string name="qr_dialog_subtitle">Pokaż go znajomemu, aby go dodać</string>
    <string name="qr_dialog_nickname_label">PSEUDONIM</string>
    <string name="qr_dialog_download_btn">Pobierz QR</string>
    <string name="qr_dialog_info_title">Szybkie dodawanie</string>
    <string name="qr_dialog_info_text">Skanując kod znajomego, automatycznie dodasz go do swojej listy i będziesz mógł widzieć jego ulubione premiery.</string>
    <string name="qr_save_success">Zapisano kod QR w galerii!</string>
    <string name="qr_save_error">Błąd zapisu obrazu</string>
    <string name="qr_generate_error">Błąd: Nie wygenerowano kodu</string>
    <string name="qr_scan_cancel">Anulowano skanowanie</string>
    <string name="qr_scan_self_error">Nie możesz dodać samego siebie!</string>
    <string name="qr_scan_already_friend">Ten użytkownik jest już na Twojej liście!</string>
    <string name="qr_scan_invalid">Nieprawidłowy kod QR</string>
    <string name="qr_scan_fetch_error">Błąd podczas pobierania danych użytkownika</string>
    <string name="qr_saving_toast">Zapisywanie kodu QR...</string>
    <string name="toast_captcha_success">Weryfikacja udana!</string>
    <string name="toast_fill_fields">Wypełnij pola!</string>
    <string name="toast_confirm_robot">Potwierdź, że nie jesteś robotem!</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="bluetooth_searching">Szukanie osób w pobliżu...</string>
    <string name="bluetooth_ensure_visible">Upewnij się, że inni też mają włączone\nCinematUZ</string>
    <string name="bluetooth_found_devices">ZNALEZIONE URZĄDZENIA</string>
</resources>